# dnrs

./: Cargo.toml  LICENSE  README.md
docs/: example-config.yaml
docs/example-config/: resolver.yaml
docs/example-config/dns/: hetzner-domains.yaml  nitrado-domains.yaml
docs/example-config/providers/: hetzner.yaml  nitrado.yaml
src/: cli.rs  cli_tests.rs  config.rs  lib.rs  logger.rs  main.rs  provider.rs  resolver.rs
src/cli/: auto.rs  command.rs  generate_config.rs  get.rs
src/config/: auto.rs  dns.rs  provider.rs  resolver.rs
src/provider/: hetzner.rs  netcup.rs  nitrado.rs
src/provider/hetzner/: config.rs  model.rs
src/provider/netcup/: config.rs  model.rs
src/provider/nitrado/: config.rs  model.rs
src/types/: dns.rs
